--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -1,7 +1,3 @@
-doctype
-head
-    title hello
-    meta(charset='utf8')
-    link(rel='stylesheet' href='style/main.css')
+extends base/header.jade
 body
     div.container
