added var in less and livereload

--- a/public/jade/base/header.jade
+++ b/public/jade/base/header.jade
@@ -1,5 +1,8 @@
 doctype
-head
-    title hello
-    meta(charset='utf8')
-    link(rel='stylesheet' href='../style/main.css')
+html
+    head
+        title hello
+        meta(charset='utf8')
+        link(rel='stylesheet' href='../style/main.css')
+body
+    div.container
