update coffee script minify css and uglify

--- a/public/jade/base/header.jade
+++ b/public/jade/base/header.jade
@@ -3,6 +3,5 @@ html
     head
         title hello
         meta(charset='utf8')
-        link(rel='stylesheet' href='../style/main.css')
-body
-    div.container
+        link(rel='stylesheet' href='./vendor/bootstrap/dist/css/bootstrap.min.css')
+        link(rel='stylesheet' href='./style/main.css')
