--- a/public/views/base/header.jade
+++ b/public/views/base/header.jade
@@ -1,7 +1,7 @@
 doctype
 html
     head
-        title hello
+        title= title
         meta(charset='utf8')
         link(rel='stylesheet' href='./vendor/bootstrap/dist/css/bootstrap.min.css')
         link(rel='stylesheet' href='./style/main.css')
