--- a/public/views/base/header.jade
+++ b/public/views/base/header.jade
@@ -5,3 +5,4 @@ html
         meta(charset='utf8')
         link(rel='stylesheet' href='./vendor/bootstrap/dist/css/bootstrap.min.css')
         link(rel='stylesheet' href='./style/main.css')
+body
